FIX too large buttons on mobile view

--- a/src/index.less
+++ b/src/index.less
@@ -14,7 +14,7 @@ input, label {
 }
 
 .knapp, .toggleKnapp, input {
-    width: 25em;
+    width: 20em;
 }
 
 .ekspanderbartPanel {
